# gcookie

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  release.yml
src/: cookie.rs  lib.rs  main.rs
src/browser/: chromium_windows.rs  firefox.rs  gcookie_utils.rs  linux.rs  mod.rs  rookie_utils.rs  utils.rs  windows.rs
src/copy/: mod.rs
src/windows/: crypto.rs  mod.rs  restart_manager.rs  utils.rs
src/windows/copy/: rawcopy.rs  sector_reader.rs
