[package]
name = "gcookie"
version = "0.0.3"
edition = "2021"
authors = ["Alan Yang <zhifengle@gmail.com>"]
license = "MIT"
readme = "README.md"
description = "An tool for getting site cookie from your browser"
repository = "https://github.com/zhifengle/gcookie"
keywords = ["cookie", "chrome", "firefox"]
include = ["src/**/*", "README.md"]

[[bin]]
test = false
name = "gcookie"

[dependencies]
clap = "4.2.7"
dirs = "4.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde_json = "1.0"
base64 = "0.13.0"
url = "2.2.2"

[target.'cfg(all(unix, not(macos)))'.dependencies]
pbkdf2 = { version = "0.11", default-features = false }
hmac = "0.12"
sha1 = "0.10"
libaes = "0.6.4"

[target.'cfg(windows)'.dependencies]
aes-gcm = "0.9.4"

[target.'cfg(windows)'.dependencies.windows]
version = "0.38.0"
features = [
    "Win32_System_Memory",
    "Win32_Foundation",
    "Win32_Security_Cryptography",
]

[profile.release]
lto = true
strip = true
opt-level = "z"