[package]
name = "gcookie"
version = "0.1.4"
edition = "2021"
authors = ["Alan Yang <zhifengle@gmail.com>"]
license = "MIT"
readme = "README.md"
description = "An tool for getting site cookie from your browser"
repository = "https://github.com/zhifengle/gcookie"
keywords = ["cookie", "chrome", "firefox"]
include = ["src/**/*", "README.md"]

[[bin]]
test = false
name = "gcookie"

[dependencies]
clap = { version = "4.5", features = ["cargo"] }
dirs = "5.0.1"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde_json = "1.0"
base64 = "0.22"
url = "2.2.2"
rookie = { git = "https://github.com/FeldrinH/rookie.git", branch = "main" }
sha2 = "0.10.8"

[target.'cfg(windows)'.dependencies]
aes-gcm = "0.10.3"
anyhow = "1"
ntfs = "0.4"

[target.'cfg(windows)'.dependencies.windows]
version = "0.58.0"
features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Security_Cryptography",
    "Win32_System_RestartManager"
]

[profile.release]
lto = true
strip = true
opt-level = "z"